# tracing-slf4j

./: Cargo.toml  README.md  build.rs
java/: build.gradle  settings.gradle
java/src/main/java/nl/mrfriendly/tracing/: TracingSlf4jAdapter.java  TracingSlf4jImpl.java  TracingSlf4jLoggerFactory.java  TracingSlf4jServiceProvider.java
src/: lib.rs
